--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 		<head> 
 			<meta charset="UTF-8">
-			<title>Блочная модель</title>
+			<title>Hello!!!</title>
 			<link rel="shortcut icon" href="favicon.png">
 			<link rel="stylesheet" type="text/css" href="css/styles.css">
 		</head> 
