--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 		</head> 
 		<body> 
 			<ul class="tabs">
-				<li class="now-active"><a href="#">Сутки</a></li>
+				<li class="now-active"><a href="#">День</a></li>
 				<li><a href="#">Неделя</a></li>
 				<li><a href="#">Месяц</a></li>
+
 			</ul>
 		</body> 
 </html>
