--- a/index.html
+++ b/index.html
@@ -9,6 +9,32 @@
 		<body> 
 			<ul class="tabs">
 				<li class="now-active"><a href="#">День</a></li>
+				<li class="now-active"><a href="#">День</a></li>
+				<li class="now-active"><a href="#">День</a></li>
+				<li class="now-active"><a href="#">День</a></li>
+				<li class="now-active"><a href="#">День</a></li>
+				
+			</ul>
+			<ul class="tabs">
+				<li class="now-active"><a href="#">День</a></li>
+				<li><a href="#">Неделя</a></li>
+				<li><a href="#">Месяц</a></li>
+
+			</ul>
+			<ul class="tabs">
+				<li class="now-active"><a href="#">День</a></li>
+				<li><a href="#">Неделя</a></li>
+				<li><a href="#">Месяц</a></li>
+
+			</ul>
+			<ul class="tabs">
+				<li class="now-active"><a href="#">День</a></li>
+				<li><a href="#">Неделя</a></li>
+				<li><a href="#">Месяц</a></li>
+
+			</ul>
+			<ul class="tabs">
+				<li class="now-active"><a href="#">День</a></li>
 				<li><a href="#">Неделя</a></li>
 				<li><a href="#">Месяц</a></li>
 
